style: fix about alignment

--- a/client/less/about.less
+++ b/client/less/about.less
@@ -11,11 +11,15 @@
     img.img {
       max-width: 250px;
       max-height: 250px;
-      float: left;
+      text-align: right;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
     }
 
     h1.title {
       line-height: 250px;
+      text-align: center;
     }
 
     .center {
